--- a/hello_cloud_android/app/src/main/res/values/strings.xml
+++ b/hello_cloud_android/app/src/main/res/values/strings.xml
@@ -1,5 +1,12 @@
-<resources>
+<resources xmlns:xliff="http://schemas.android.com/tools">
     <string name="app_name">Hello Cloud</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="message_permission_not_granted">Permission not granted.</string>
+
+    <string name="error_toast_cannot_start_advertising">Cannot start advertising: <xliff:g id="error_message">%1$s</xliff:g>.</string>
+    <string name="error_toast_cannot_start_discovery">Cannot start discovery: <xliff:g id="error_message">%1$s</xliff:g>.</string>
+    <string name="error_toast_cannot_send_connection_request">Cannot send connection request: <xliff:g id="error_message">%1$s</xliff:g>.</string>
+    <string name="error_toast_cannot_accept_connection_request">Cannot accept connection request: <xliff:g id="error_message">%1$s</xliff:g>.</string>
+    <string name="error_toast_cannot_reject_connection_request">Cannot reject connection request: <xliff:g id="error_message">%1$s</xliff:g>.</string>
+    <string name="error_toast_rejected_by_remote_device">Rejected by remote device: [<xliff:g id="remote_device_name">%1$s</xliff:g>].</string>
+    <string name="error_toast_remote_device_disconnected">Remote device [<xliff:g id="remote_device_name">%1$s</xliff:g>] disconnected. \nStop all transferring with this device.</string>
 </resources>
