--- a/presence/rust/README
+++ b/presence/rust/README
@@ -1,1 +1,4 @@
 This directory contains Rust implementation of Nearby Presence.
+
+Presence Engine provides discovery service to applications by aggregating
+signals from wireless medium.
